--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,38 @@
+*{
+  margin: 0;
+  padding: 0;
+}
 .App {
+  width: 100%;
+  display: flex;
+  margin-top: 50px;
+  font-size: 26px;
+}
+
+.col1{
+  width: 200px;
+  border: 1px solid black;
+  height: 400px;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.col2{
+  width: 100%;
+  border: 1px solid red;
+  height: 400px;
+  text-align: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.col3{
+  width: 300px;
+  border: 1px solid black;
+  height: 400px;
+  text-align: center;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+@media only screen and (max-width: 600px) {
+  .col2{
+    min-width: 100px !important ;
+    overflow: auto;
   }
 }
